--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
 
      <footer id="footer">
 
-          <i class="fa-brands fa-twitter footer"></i>
-          <i class="fa-brands fa-facebook footer"></i>
-          <i class="fa-brands fa-instagram footer"></i>
-          <i class="fa-solid fa-envelope footer"></i>
+          <a href="https://twitter.com/GauravP07467099" target="_blank" style="color: black"><i class="fa-brands fa-twitter footer"></i></a>
+          <a href="https://www.facebook.com/gaurav.pratap.566148/" target="_blank" style="color: black"><i class="fa-brands fa-facebook footer"></i></a>
+          <a href="https://www.instagram.com/gaurav._gps/" target="_blank" style="color: black"><i class="fa-brands fa-instagram footer"></i></a>
+          <a href="https://gps-gaurav.github.io/My-CV/" target="_blank" style="color: black"><i class="fa-solid fa-envelope footer"></i></a>
           <p> © Copyright 2022 TinDogs</p>
 
      </footer>
