--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
                <div class="row">
                     <div class="col-lg-6">
                          <h1>Meet new and interesting dogs nearby.
-                         <br>We have all the dogs, the greatest dogs.</h1>
+       
+                          <button class="btn btn-dark btn-lg Download-button" type="button">
+                              <i class="fa-brands fa-apple"></i>Download</button>
+                         <button class="btn btn-dark btn-lg Download-button" type="button">
+                              <i class="fa-brands fa-google-play"></i>Download</button>
                     </div>
                     <div class="col-lg-6">
                          <img class="title-img" src="iphone6.png" alt="iphone-mockup">
