--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
                <!-- Title -->
                <div class="row">
                     <div class="col-lg-6">
-                         <h1>Meet new and interesting dogs nearby.
-       
-                          <button class="btn btn-dark btn-lg Download-button" type="button">
+                         <h1>Meet new and interesting dogs nearby.</h1>
+                         <button class="btn btn-dark btn-lg Download-button" type="button">
                               <i class="fa-brands fa-apple"></i>Download</button>
                          <button class="btn btn-dark btn-lg Download-button" type="button">
                               <i class="fa-brands fa-google-play"></i>Download</button>
